// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Arcane Mage Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Arcane Mage Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `null`;

exports[`The Arcane Mage Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers ArcaneChargeTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers ArcaneChargeTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers ArcaneFamiliar matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer analyzers ArcaneFamiliar matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer analyzers ArcaneIntellect matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers ArcaneIntellect matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers ArcaneManaValues matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers ArcaneManaValues matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "inv_elemental_mote_mana",
    "importance": "major",
    "issue": "You had mana left at the end of the fight. You should be aiming to complete the fight with as little mana as possible regardless of whether your cooldowns will be coming up or not. So dont be afraid to burn your mana before the boss dies.",
    "stat": <React.Fragment>
      61.46% (75k) mana left
       (
      &lt;20.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Arcane Mage Analyzer analyzers ArcaneMissiles matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers ArcaneMissiles matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers ArcaneOrb matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer analyzers ArcaneOrb matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer analyzers ArcanePower matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=12042"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Arcane Power"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_nature_lightning.jpg"
            />
          </a>
           
          Arcane Power Utilization
        </label>
        <div
          className="value"
        >
          <a
            href="http://wowhead.com/spell=12042"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Arcane Power"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_nature_lightning.jpg"
              style={
                Object {
                  "height": "1.2em",
                  "marginBottom": ".15em",
                }
              }
            />
          </a>
           
          100
           %
          <br />
          <a
            href="http://wowhead.com/spell=30451"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Arcane Blast"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_arcane_blast.jpg"
              style={
                Object {
                  "height": "1.2em",
                  "marginBottom": ".15em",
                }
              }
            />
          </a>
           
          0
           %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Arcane Mage Analyzer analyzers ArcanePower matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers Buffs matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers Buffs matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Arcane Mage Analyzer analyzers CancelledCasts matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small value"
    label="test"
    position={10}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          Cancelled Casts
        </label>
        <div
          className="value"
        >
          <svg
            className="icon stroke"
            viewBox="15 15 70 70"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              style={
                Object {
                  "strokeLinecap": "round",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 10,
                }
              }
            >
              <line
                x1="21.19"
                x2="78.81"
                y1="21.19"
                y2="78.81"
              />
              <line
                x1="78.81"
                x2="21.19"
                y1="21.19"
                y2="78.81"
              />
            </g>
          </svg>
           
          4.02
          % 
          <small>
            Casts Cancelled
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Arcane Mage Analyzer analyzers CancelledCasts matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers Channeling matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers Channeling matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Arcane Mage Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers ManaTab matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers ManaTab matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers MirrorImage matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer analyzers MirrorImage matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer analyzers RuleOfThrees matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Arcane Mage Analyzer analyzers RuleOfThrees matches the suggestions snapshot 1`] = `Array []`;

exports[`The Arcane Mage Analyzer analyzers RuneOfPower matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    category="TALENTS"
    className="panel statistic flexible "
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=116011"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Rune of Power"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_mage_runeofpower.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=116011"
            rel="noopener noreferrer"
            target="_blank"
          >
            Rune of Power
          </a>
        </label>
        <div
          className="value"
        >
          17
          % 
          <small>
            Damage added by Rune of Power
          </small>
          <br />
          9
          s 
          <small>
            Average time in Rune per cast
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Arcane Mage Analyzer analyzers RuneOfPower matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_mage_runeofpower",
    "importance": "minor",
    "issue": <React.Fragment>
      You sometimes aren't standing in your 
      <SpellLink
        icon={true}
        id={116011}
      />
       for its full duration. Try to only use it when you know you won't have to move for the duration of the effect.
    </React.Fragment>,
    "stat": <React.Fragment>
      Average 9.3s standing in each Rune of Power
       (
      the full duration of 10s is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Arcane Mage Analyzer analyzers TimeAnomaly matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer analyzers TimeAnomaly matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Arcane Mage Analyzer should match the checklist snapshot 1`] = `
<ul
  className="checklist"
>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your cooldowns
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "72.07486774111928%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Using your cooldown abilities as often as possible can help raise your dps significantly. Some help more than others, but as a general rule of thumb you should be looking to use most of your damaging abilities and damage cooldowns as often as possible unless you need to save them for a priority burst phase that is coming up soon.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=12042"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_nature_lightning.jpg"
                  />
                   
                  Arcane Power
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=12051"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_nature_purge.jpg"
                  />
                   
                  Evocation
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  68.81%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "30.55234957947211%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=116011"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_mage_runeofpower.jpg"
                  />
                   
                  Rune of Power
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=205032"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_thunderking_overcharge.jpg"
                  />
                   
                  Charged Up
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  82.34%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ffc84a",
                        "transition": "background-color 800ms",
                        "width": "57.747121385005016%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use Arcane Power effectively
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Using 
            <a
              href="http://wowhead.com/spell=12042"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_nature_lightning.jpg"
              />
               
              Arcane Power
            </a>
             properly is one of the most important aspects of playing Arcane well. Therefore it is critical that you make the most of the time that you have while Arcane Power is active. This include things such as not wasting time or GCDs while Arcane Power is active and ensuring that you properly setup for your "burn phase" before hitting Arcane Power.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Spells Cast During Arcane Power
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Arcane Power Pre-Cast Setup
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your talents effectively
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "88.29500000000002%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Regardless of which talents you select, you should ensure that you are utilizing them properly. If you are having trouble effectively using a particular talent, you should consider taking a different talent that you can utilize properly or focus on effectively using the talents that you have selected.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Rule of Threes Buff Usage
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Rune of Power Uptime
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  9
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#a6c34c",
                        "transition": "background-color 800ms",
                        "width": "76.59000000000003%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Avoid downtime
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ffc84a",
                  "width": "56.737498912728256%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            As a DPS, it is important to spend as much time casting as possible as if you arent casting you arent doing damage. Therefore it is important to minimize your movements, stay within range of the target, and try to avoid cancelling casts (unless you have to). While some fights will have an amount of time that is unavoidable downtime; the more you can minimize that downtime, the better.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Downtime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  14.83%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "13.474997825456514%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Cancelled Casts
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  4.02%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Maintain your buffs
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            You should ensure that you maintain 
            <a
              href="http://wowhead.com/spell=1459"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_holy_magicalsentry.jpg"
              />
               
              Arcane Intellect
            </a>
             for the entire fight and recast it whenever you are ressurected and likewise, if you have the appropriate classes/specs in your group you should also ensure that you maintain their buffs as possible. Additionally, you should also maintain other buffs such as 
            <a
              href="http://wowhead.com/spell=205022"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_socererking_arcanemines.jpg"
              />
               
              Arcane Familiar
            </a>
             if you are talented into them.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Arcane Intellect Uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Manage your mana
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "73.89100378330517%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            The biggest aspect of playing Arcane properly is managing your mana effectively. Essentially your mana dictates how much damage you can do and therefore needs to be managed properly. Things such as running out of mana during 
            <a
              href="http://wowhead.com/spell=12042"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_nature_lightning.jpg"
              />
               
              Arcane Power
            </a>
            , letting your mana cap out at 100% for too long, or ending the fight with mana remaining all have negative effects on your DPS.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Mana left on boss kill
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  61.46%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "21.67301134991548%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Arcane Power Mana Mgmt.
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Arcane Missiles only with Clearcasting
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ffc84a",
                  "width": "59.25925925925925%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                All items enchanted
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Using high quality enchants
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  1
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#df7102",
                        "transition": "background-color 800ms",
                        "width": "33.33333333333333%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a second potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a high quality pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
